# Gopher

./: CMakeLists.txt  README.md
dataset/: example.txt  updates.txt  wiki-talk-temporal-updates.txt
include/: code_generation.h  dag.h  execution_planner.h  five_clique.h  four_clique.h  graph_analysis.h  instance_restoration.h  irregraph_gen.h  mappings.h  mining.h  mongodb_utils.h  pattern.h  performance_analyzer.h  schedule.h  task_manager.h
src/: baseline_test.cpp  code_generation.cpp  dag.cpp  execution_planner.cpp  five_clique.cpp  four_clique.cpp  graph_analysis.cpp  instance_restoration.cpp  irregraph_gen.cpp  mappings.cpp  mining.cpp  mining_4Clique.cpp  mining_5Clique.cpp  mongodb_utils.cpp  pattern.cpp  performance_analyzer.cpp  schedule.cpp  task_manager.cpp
